# impression-bot

./: .custom_coordinates.cpp.swp  .ratio_resize_logo.cpp.swp  CMakeCache.txt  CMakeLists.txt  ImpressionVisualBot.cpp  Makefile  ProductList.cpp  ProductList.h  README.txt  a.out  cmake_install.cmake  custom_coordinates.cpp  down_size.cpp  find_values_x.cpp  find_values_y.cpp  get_file_name.cpp  image_place.cpp  image_type.cpp  impression-bot  impressionbot  install.py  makefile  place_interactive.cpp  placement_xy.csv  print_area_regex.cpp  print_area_regex_prod.cpp  print_area_regex_prod_height.cpp  print_area_regex_prod_width.cpp  product_data.cpp  products_list.csv  products_list_edited.csv  ratio_resize.cpp  ratio_resize_BAK.cpp  ratio_resize_logo.cpp  ratio_resize_prod.cpp  regexing.cpp  text_colour.h  turnToAlpha.cpp  uninstall.py
Data management utilities/: file-remove_regex.py  rename-files.py  resize_images.py
old_make_file/: makefile
test_images/: eps_image.eps  jpg_image.tiff  outalab.ai
